# GModel

.history/: .gitignore_20260108094001  .gitignore_20260108094007  .gitignore_20260108094037  .gitignore_20260108094106  .gitignore_20260108094152  .gitignore_20260108094154  .gitignore_20260108094206  .gitignore_20260108094221  .gitignore_20260108094230  .gitignore_20260108094238
DiffusionModelForTS/: dataset.py  evaluate.py  forward.py  main.py  pyproject.toml  sample.py  scenario_reduction.py  utils.py
DiffusionModelForTS/model/: model.py  model_v1.py  model_v1_nomlp.py
RenewablePowerAttentionGAN/: 10year_energy_data.csv  dataread.py  train.py
